# Qt-PointCloud-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  resources.qrc
qml/: LogPanel.qml  main.qml
scripts/python/: configure.py  init_project.py
src/: main.cpp
src/ui/: Logger.cpp  Logger.h
src/utils/: Singleton.h
